--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="profile" id="profile-link">
             <img src="./assets/images/Sahana.png" alt="my photo" >
             <h2>About Me</h2>
-            <p class="intro">I’ve always been someone who has both a creative and a logical side. When I discovered web design, I realized it would be the perfect fit. I could use my creative side to design and my logical side to code. As a bonus, being both designer and developer allows me to make sure no detail is lost in translation.</p>
+            <p class="intro">Two Third of world population are familiar with web application.It fascinates me when I see so many beautiful and informative website and how it helps in day to day activities. As a web developer 👩🏻‍💻 I would like to solve complex problems and make it presentable to web users.</p>
         </div>
         <div class="show-projects" id="project-highlight">
             <section class="project1">
@@ -50,8 +50,8 @@
           </div>  
           <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>If you love hot wings as much as I do.</h3>
-            <p class="contact-message">Love hot wings as much as I do?Lets'talk about how awesome they are!We can code while having hot wings!</p>
+            <h3>If you love masala ☕ as much as I do.</h3>
+            <p class="contact-message">Lets'talk about how awesome it is! We can code while having hot Chai ☕!</p>
             <a class="btn" href="mailto:sahanaroy20@email.com">CONTACT ME</a>
           </div>
         </div>
